[package]
name = "libzt"
version = "0.1.2"
authors = ["Joseph Henry <joseph.henry@zerotier.com>"]
edition = "2018"
description = "Encrypted P2P SD-WAN library by ZeroTier"
documentation = "https://docs.zerotier.com"
repository = "https://github.com/zerotier/libzt"
readme = "README.md"
homepage = "https://www.zerotier.com"
license-file = "LICENSE.txt"
keywords = ["zerotier", "p2p", "vpn", "socket", "network"]
categories = ["network-programming", "cryptography"]

[dependencies]
log = "0.4.18"
dirs = "5.0.1"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
clap-num = "1.0"
env_logger = "0.10"
parking_lot = { version = "0.12", features = ["send_guard"] }

[build-dependencies]
bindgen = "0.65.1"
libc = "0.2"
cmake = "0.1"

[lib]
name = "libzt"
path = "src/lib.rs"
